request geo